Closed
Bug 450550
Opened 16 years ago
Closed 16 years ago
Needless a PRBool value in nsParseNewMailState::DoneParsingFolder.
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9.1a2
People
(Reporter: hiro, Assigned: hiro)
Details
Attachments
(1 file)
1.29 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.15) Gecko/20080702 Ubuntu/8.04 (hardy) Firefox/2.0.0.15 Kazehakase/0.5.4
Build Identifier:
Needless a PRBool value in nsParseNewMailState::DoneParsingFolder.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Assignee | ||
Comment 1•16 years ago
|
||
Assignee | ||
Updated•16 years ago
|
Attachment #333696 -
Flags: review?(bienvenu)
Updated•16 years ago
|
Status: UNCONFIRMED → NEW
Component: General → Backend
Ever confirmed: true
Product: Thunderbird → MailNews Core
QA Contact: general → backend
Version: unspecified → Trunk
Updated•16 years ago
|
Assignee: nobody → poincare
Severity: normal → minor
Hardware: PC → All
Comment 2•16 years ago
|
||
Comment on attachment 333696 [details] [diff] [review]
A patch
thx for the patch!
Attachment #333696 -
Flags: superreview+
Attachment #333696 -
Flags: review?(bienvenu)
Attachment #333696 -
Flags: review+
Updated•16 years ago
|
Keywords: checkin-needed
Comment 3•16 years ago
|
||
Checked in, changeset id 98:840d841a0a86.
Thanks for the patch.
Please note we are using Mercurial as our source configuration tool now, cvs is obsolete for trunk development. More information here:
http://developer.mozilla.org/en/docs/comm-central
http://developer.mozilla.org/en/docs/Comm-central_source_code_%28Mercurial%29
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a2
You need to log in
before you can comment on or make changes to this bug.
Description
•