Bug 450550 Needless PRBool value in nsParseNewMailState::DoneParsingFolder. r/sr=bienvenu